--- a/meteor/client/styles/rundownView.scss
+++ b/meteor/client/styles/rundownView.scss
@@ -1132,6 +1132,18 @@ body.vertical-overflow-only {
 					background-attachment: local;
 					background-size: 1.8em auto;
 				}
+
+				.segment-timeline__part__nextline--endline {
+					border-left-style: dotted;
+
+					&::before {
+						display: none;
+					}
+					
+					&::after {
+						display: none;
+					}
+				}
 			}
 
 			&:not(.live) {
